Reverting, #wiki10 must be position:relative to avoid being moved after the flash object is loaded. This conflicts with the alignment of the headings, will try and fix this later unless you know of a good way around this

--- a/trunk/css/style.css
+++ b/trunk/css/style.css
@@ -133,7 +133,7 @@ div.colborder {
 }
 
 img#wiki10{
-	position: absolute;
+	position: relative;
 	float: left;
 	left: 2em;
 	opacity: .66;
